[build-system]
requires = ['setuptools >= 61.0.0', 'wheel']

build-backend = 'setuptools.build_meta'

[project]
name = 'compgraph'
description = 'Python Map-Reduce model graph implementation'
version = '0.1.0'
readme='LIB_README.md'
authors = [
    { name = 'Maksim Abraham', email = 'fdrose@yandex.ru' }
]
dependencies = [
    'click',
    'types-python-dateutil'
]

[tool.setuptools.packages]
find = { }

[project.optional-dependencies]
visualisation = ['pandas >= 1.4.4', 'matplotlib >= 3.5.3', 'seaborn >= 0.12.0']
